[project]
name = "atsphinx-mini18n"
version = "0.5.0"
description = "Sphinx builder for i18n site on single deployment"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
license = "Apache-2.0"
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",

]
readme = "README.rst"
dependencies = [
    "sphinx>=8.0.0",
]

[project.urls]
Repository = "https://github.com/atsphinx/mini18n"
Issues = "https://github.com/atsphinx/mini18n/issues"
Document = "https://atsphinx.github.io/mini18n/"

[dependency-groups]
dev = [
    "esbonio>=1.0",
    "sphinx-autobuild>=2021.3.14",
    "types-beautifulsoup4>=4.12.0.20241020",
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
]
lint = [
    "doc8>=1.1.2",
    "ruff>=0.11.9",
    "ty>=0.0.1a5",
]
test = [
    "beautifulsoup4>=4.12.3",
    "pytest>=8.0.0",
    "pytest-playwright>=0.7.0",
    "sphinx-revealjs~=3.0.2",
]
docs = [
    "furo>=2024.1.29",
    "sphinx-intl>=2.1.0",
    "sphinx-tabs>=3.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "--browser firefox"

[tool.ruff.lint]
select = ["C90", "D", "E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.doc8]
max-line-length = 119
ignore = ["D000", "D004"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/atsphinx"]
only-includes = ["src/atsphinx"]
